mockers_derive/tests/compile-fail/extern_method.rs
use mockers_derive::mocked;

#[mocked]
trait A {
    extern "C" fn foo();
}

fn main() {}
