mockers_derive/tests/compile-fail/extern_method.stderr
error: Extern specification for trait methods is not supported.

 --> $DIR/extern_method.rs:5:5
  |
5 |     extern "C" fn foo();
  |     ^^^^^^

error: could not compile `mockers_derive-tests`.
